Preview isMember and isRegistered (#35)
* Preview isMember and isRegistered

* Lint fix
