# server/docs/swagger.json
@@ -512,7 +512,7 @@
                     "200": {
                         "description": "User data",
                         "schema": {
-                            "$ref": "#/definitions/domain.User"
+                            "$ref": "#/definitions/domain.UserPreview"
                         }
                     },
                     "400": {
@@ -557,6 +557,9 @@
                 },
                 "id": {
                     "type": "string"
+                },
+                "isMember": {
+                    "type": "boolean"
                 },
                 "name": {
                     "type": "string"
@@ -611,6 +614,32 @@
                     "type": "string"
                 },
                 "role": {
+                    "type": "string"
+                },
+                "telegramId": {
+                    "type": "integer"
+                },
+                "telegramUsername": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.UserPreview": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "bio": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "isRegistered": {
+                    "type": "boolean"
+                },
+                "lastName": {
                     "type": "string"
                 },
                 "telegramId": {
