# server/pkg/gateways/rest/user/get_me_preview.go
@@ -16,7 +16,7 @@ import (
 // @Accept json
 // @Produce json
 // @Schemes http https
-// @Success 200 {object} domain.User "User data"
+// @Success 200 {object} domain.UserPreview "User data"
 // @Failure 400 "Bad Request"
 // @Failure 500 "Internal Server Error"
 // @Security ApiKeyAuth
